# private-domain-ai-brain

./: .dockerignore  .env.dev.example  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/plans/: 2026-03-19-main-model-switch.md  2026-03-19-store-diagnosis-skill.md  2026-03-20-conversation-management.md  2026-03-20-subagent-skill-alignment.md  2026-03-24-async-db-cancelled-error-fix.md
scripts/: create_api_credential.py  deploy_prod.sh  deploy_remote.sh  init_db.sql
scripts/migrations/: 2026-03-20-add-conversation-metadata.sql  2026-03-20-add-customer-service-support.sql  2026-03-23-add-conversation-messages.sql  2026-03-24-add-api-credentials.sql  2026-03-26-add-file-id-to-uploaded-files.sql
src/: config.py  main.py
src/agent/: customer_service.py  mode_selector.py  orchestrator.py  plan_runner.py  router.py  runtime.py
src/api/: auth.py  openai_compat.py  routes.py  schemas.py  streaming.py  webhooks.py
src/memory/: attachments.py  checkpointer.py  conversations.py  customer_service.py  db.py  profile_middleware.py  store.py
src/skills/: runtime.py
src/storage/: oss.py
src/subagents/: attachment_analysis.py  content_generation.py  data_analysis.py  knowledge_base.py
src/tools/: content_tools.py  (+3 more)
tasks/: lessons.md  todo.md
tests/: conftest.py  test_api.py  test_api_credential_script.py  test_attachment_agent.py  test_attachments.py  test_auth.py  test_config.py  test_content_agent.py  test_conversation_store.py  test_customer_service.py  test_data_agent.py  test_db.py  test_db_scripts.py  test_deploy_scripts.py  test_docker_assets.py  test_kb_agent.py  test_main.py  test_mode_selector.py  test_openai_compat.py  test_plan_runner.py  test_profile_middleware.py  test_profile_store.py  test_router.py  test_runtime.py  test_skill_metadata.py  test_webhooks.py
(+10 files in other folders)
